--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
   },
   "devDependencies": {},
   "dependencies": {
-    "rpi-433": "^2.1.0",
+    "simonphumin/rpi-433": "^2.1.0",
     "wiring-pi": "^2.2.0"
   },
   "engines": {
